opam-version: "2.0"
maintainer: "Florian Schroedl <contact@florianschroedl.com>"
authors: [ "Florian Schroedl <contact@florianschroedl.com>" ]
license: "BSD-3-clause"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "reason" {>= "3.0.0" & < "4.0.0"}
  "dune" {>= "1.8"}
  "ocaml-syntax-shims"
]
