opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/piaf"
bug-reports: "https://github.com/anmonteiro/piaf/issues"
dev-repo: "git+https://github.com/anmonteiro/piaf.git"
doc: "https://anmonteiro.github.io/piaf/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "reason" {>= "3.0.0" & < "4.0.0"}
  "dune" {>= "1.8"}
  "ocaml-syntax-shims"
]
synopsis:
  "A client library for the HTTP/1.X and HTTP/2 protocols written entirely in OCaml"
